--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -5,6 +5,24 @@
 \lhead{Leetcode}
 \rhead{Hanhee Lee}
 
+\definecolor{codegray}{gray}{0.95}
+\lstset{
+    language=Python,
+    backgroundcolor=\color{codegray},
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue}\bfseries,
+    commentstyle=\color{green!50!black},
+    stringstyle=\color{orange},
+    showstringspaces=false,
+    columns=flexible,
+    keepspaces=true,
+    frame=single,
+    captionpos=b,
+    tabsize=4,
+    breaklines=true,
+    breakatwhitespace=true
+}
+
 \begin{document}
 
 \section{General}
@@ -15,8 +33,20 @@
 \input{lectures/1_arrays.tex}
 \newpage
 
+\section{Hashing}
+\input{lectures/1_hashing.tex}
+\newpage
+
 \section{Two Pointers}
 \input{lectures/2_two_pointers.tex}
+\newpage
+
+\section{Sliding Window}
+\input{lectures/3_sliding_window.tex}
+\newpage
+
+\section{Binary Search}
+\input{lectures/4_binary_search.tex}
 \newpage
 
 \end{document}
