--- a/00_notes/lectures/2_two_pointers.tex
+++ b/00_notes/lectures/2_two_pointers.tex
@@ -50,10 +50,15 @@
 \end{summary}
 \newpage
 
-\subsection{Front and Back Pointers}
+\subsection{Left and Right Pointers}
 \begin{algo}
     \begin{enumerate}
-        \item Initialize two pointers, one at the front and one at the back of the array.
+        \item Initialize two pointers. Some common choices:
+        \begin{itemize}
+            \item One at the front and one at the back of the array.
+            \item Both at the front of the array.
+            \item Both at the back of the array.
+        \end{itemize}
     \end{enumerate}
 \end{algo}
 
@@ -88,7 +93,6 @@
                     \item Use front and back pointers. If > target, move back pointer left. If < target, move front pointer right.
                 \end{itemize}
             } \\
-            \midrule
             \bottomrule
         \end{tabular}
     \end{center}
