--- a/00_notes/lectures/3_sliding_window.tex
+++ b/00_notes/lectures/3_sliding_window.tex
@@ -148,6 +148,21 @@ return min_or_max_result
                     \item \textbf{Return:} \texttt{s[res[0]:res[1]+1]} if valid window found, else empty string.
                 \end{itemize}                
             } \\
+            \midrule
+            239. Sliding Window Maximum & Given an integer array nums and an integer k, \\
+            & return the maximum value in each sliding window of size k. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item \textbf{Init:} Use deque to store indices of elements in the current window. 
+                    \item \textbf{For right in range(n):} 
+                    \begin{itemize}
+                        \item Remove indices that are out of the current window.
+                        \item Remove indices from the back of the deque while the current element is greater than the element at those indices.
+                        \item Append the current index to the deque.
+                        \item If the window size is reached, append the maximum (element at the front of the deque) to the result list.
+                    \end{itemize}
+                \end{itemize}
+            } \\
             \bottomrule
         \end{tabular}
     \end{center}
