arrays and hashing

--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -29,13 +29,10 @@
 \input{lectures/0_general.tex}
 \newpage
 
-\section{Arrays}
-\input{lectures/1_arrays.tex}
+\section{Arrays and Hashing}
+\input{lectures/1_arrays_and_hashing.tex}
 \newpage
 
-\section{Hashing}
-\input{lectures/1_hashing.tex}
-\newpage
 
 \section{Two Pointers}
 \input{lectures/2_two_pointers.tex}
