arrays and hashing

--- a/00_notes/lectures/1_arrays_and_hashing.tex
+++ b/00_notes/lectures/1_arrays_and_hashing.tex
@@ -46,7 +46,7 @@
                 \end{itemize}
             } \\
             \midrule
-            49. Group Anagrams & Given an array of strings, group the anagrams together. \\
+            **49. Group Anagrams & Given an array of strings, group the anagrams together. \\
             \multicolumn{2}{p{\linewidth}}{
                 \begin{itemize}
                     \item Use a hashMap to store a tuple of count of each char as the key and the list of words as the value.
@@ -54,6 +54,8 @@
                     \item Finally, return the values of the map.
                 \end{itemize}
             } \\
+            \midrule
+            
             \bottomrule
         \end{tabular}
     \end{center}
