--- a/00_notes/lectures/1_arrays_and_hashing.tex
+++ b/00_notes/lectures/1_arrays_and_hashing.tex
@@ -11,7 +11,7 @@
 
 \subsection{Hashing}
 \begin{algo}
-\begin{lstlisting}[language=Python, caption=General Hashing Pattern]
+\begin{lstlisting}
 def solve_problem(nums):
     # Step 1: Initialize the hashmap (e.g., for frequency, index, or existence check)
     hashmap = {}
