--- a/00_notes/lectures/3_sliding_window.tex
+++ b/00_notes/lectures/3_sliding_window.tex
@@ -51,6 +51,17 @@ return max_result (or other required value)
                     \item \textbf{Condition:} If freqMap\_window == freqMap\_s1, return True.
                 \end{itemize}
             } \\
+            \midrule
+            219. Contains Duplicate II & Given an integer array nums and an integer k, \\
+            & return true if there are two distinct indices i and j \\
+            & in the array such that nums[i] == nums[j] and abs(i - j) <= k. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item \textbf{Init:} Follow template with window\_freq and fixed size $k$.
+                    \item \textbf{Special Case:} If len(nums) < 2, return False.
+                    \item \textbf{Initial window:} Range(min(k+1, len(nums))) since first window can be smaller than k.
+                \end{itemize}
+            } \\
             \bottomrule
         \end{tabular}
     \end{center}
