--- a/00_notes/lectures/3_sliding_window.tex
+++ b/00_notes/lectures/3_sliding_window.tex
@@ -101,7 +101,7 @@ return min_or_max_result
             \toprule
             \textbf{Problem} & \textbf{Description:} \\
             \midrule
-            121. Best Time to Buy and Sell Stock & Given an array where the ith element is the price of a given stock \\ 
+            121. Best Time to Buy and Sell Stock & Given an array where the ith element is the price of a stock \\ 
             & on day i, find the maximum profit you can achieve. \\ 
             & You may not engage in multiple transactions. \\
             \multicolumn{2}{p{\linewidth}}{
