--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -48,5 +48,10 @@
 
 \section{Linked List}
 \input{lectures/linked_list.tex}
+\newpage
+
+\section{Images}
+\input{lectures/images.tex}
+\newpage
 
 \end{document}
