--- a/00_notes/lectures/images.tex
+++ b/00_notes/lectures/images.tex
@@ -40,6 +40,9 @@
                     \item Reverse each row.
                 \end{itemize}
             } \\
+            \midrule
+            **835. Image Overlap & Given two images represented by 2D arrays, \\
+            & find the maximum overlap between the two images. \\
         \end{tabular}
     \end{center}
 \end{summary}
