--- a/00_notes/lectures/images.tex
+++ b/00_notes/lectures/images.tex
@@ -43,6 +43,12 @@
             \midrule
             **835. Image Overlap & Given two images represented by 2D arrays, \\
             & find the maximum overlap between the two images. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item Try all possible translations of img1. 
+                    \item For each translation, calculate the overlap with img2.
+                \end{itemize}
+            }
         \end{tabular}
     \end{center}
 \end{summary}
