--- a/00_notes/lectures/1_arrays_and_hashing.tex
+++ b/00_notes/lectures/1_arrays_and_hashing.tex
@@ -95,15 +95,6 @@ def hashmap_update_logic(num, i, hashmap):
                 \end{itemize}
             } \\
             \midrule
-            73. Set Matrix Zeroes & Given an m x n integer matrix, if an element is 0, \\
-            & set its entire row and column to 0. \\
-            \multicolumn{2}{p{\linewidth}}{
-                \begin{itemize}                
-                    \item \textbf{Record Zero Positions:} Iterate through all elements. If \texttt{matrix[i][j] == 0}, append \texttt{[i, j]} to list.
-                    \item \textbf{Row/Column Zeroing:} Set all elements in column \texttt{col\_ind} to zero and all elements in row \texttt{row\_ind} to zero using two helpers.
-                \end{itemize}                
-            } \\
-            \midrule
             118. Pascal's Triangle & Given an integer numRows, return the first numRows of Pascal's triangle. \\
             \multicolumn{2}{p{\linewidth}}{
                 \begin{itemize}
@@ -115,8 +106,41 @@ def hashmap_update_logic(num, i, hashmap):
                     \end{itemize}
                 \end{itemize}                
             } \\
-            \midrule
             \bottomrule
         \end{tabular}
     \end{center}
 \end{summary}
+\newpage
+
+\begin{summary}
+    \begin{center}
+        \begin{tabular}{ll}
+            \toprule
+            \textbf{Problem} & \textbf{Description:} \\
+            73. Set Matrix Zeroes & Given an m x n integer matrix, if an element is 0, \\
+            & set its entire row and column to 0. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}                
+                    \item \textbf{Record Zero Positions:} Iterate through all elements. If \texttt{matrix[i][j] == 0}, append \texttt{[i, j]} to list.
+                    \item \textbf{Row/Column Zeroing:} Set all elements in column \texttt{col\_ind} to zero and all elements in row \texttt{row\_ind} to zero using two helpers.
+                \end{itemize}                
+            } \\
+            \midrule
+            54. Spiral Matrix & Given an m x n matrix, return all elements of the matrix in spiral order. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item \textbf{Initialize:} Create an empty list \texttt{res} and set boundaries: \texttt{top, bottom, left, right}.
+                    \item \textbf{Loop:} While top <= bottom and left <= right. Use helper functions to achieve the following:
+                    \begin{itemize}
+                        \item Traverse from left to right along the top row.
+                        \item Traverse from top to bottom along the right column.
+                        \item Traverse from right to left along the bottom row.
+                        \item Traverse from bottom to top along the left column.
+                    \end{itemize}
+                \end{itemize}
+            } \\
+            \bottomrule
+        \end{tabular}
+    \end{center}
+\end{summary}
+
