--- a/00_notes/lectures/trees.tex
+++ b/00_notes/lectures/trees.tex
@@ -145,7 +145,7 @@ def bfs(start, graph):
     visited.add(start)
 
     while queue:
-        node = queue.popleft()
+        node = queue.popleft() # FIFO (BFS)
 
         for neighbor in graph[node]:
             if neighbor not in visited:
@@ -174,6 +174,25 @@ def bfs(start, graph):
 
 \begin{algo}
 \begin{lstlisting}
+from collections import deque
+
+def dfs(start, graph):
+    visited = set()
+    stack = deque([start])
+    visited.add(start)
+
+    while stack:
+        node = stack.pop()  # LIFO (DFS)
+
+        for neighbor in graph[node]:
+            if neighbor not in visited:
+                visited.add(neighbor)
+                stack.append(neighbor) 
+\end{lstlisting}
+    \end{algo}
+
+\begin{algo}
+\begin{lstlisting}
 def dfs(node, visited):
     if node in visited:
         return
@@ -188,6 +207,28 @@ def dfs(node, visited):
 \newpage
 
 \subsubsection{Common Problems}
-
 \begin{summary}
+    \begin{center}
+        \begin{tabular}{ll}
+            \toprule
+            \textbf{Problem} & \textbf{Description:} \\
+            \midrule
+            200. Number of Islands & Given a 2D grid of '1's (land) and '0's (water), count the number of islands. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item Use DFS or BFS to explore all connected '1's and mark them as visited.
+                    \item Increment the island count for each unvisited '1'.
+                \end{itemize}
+            } \\
+            \midrule
+            79. Word Search & Given a 2D board and a word, check if the word exists in the grid. \\
+            \multicolumn{2}{p{\linewidth}}{
+                \begin{itemize}
+                    \item Use DFS to explore all possible paths in the grid.
+                    \item Mark cells as visited to avoid revisiting.
+                    \item Backtrack if the current path does not lead to a solution.
+                \end{itemize}
+            } \\
+        \end{tabular}
+    \end{center}
 \end{summary}
