--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -33,7 +33,6 @@
 \input{lectures/1_arrays_and_hashing.tex}
 \newpage
 
-
 \section{Two Pointers}
 \input{lectures/2_two_pointers.tex}
 \newpage
@@ -46,16 +45,16 @@
 \input{lectures/4_binary_search.tex}
 \newpage
 
-\section{Linked List}
-\input{lectures/linked_list.tex}
-\newpage
+% \section{Linked List}
+% \input{lectures/linked_list.tex}
+% \newpage
 
 \section{Images}
 \input{lectures/images.tex}
 \newpage
 
-\section{Trees}
-\input{lectures/trees.tex}
-\newpage
+% \section{Trees}
+% \input{lectures/trees.tex}
+% \newpage
 
 \end{document}
