--- a/00_notes/notes.tex
+++ b/00_notes/notes.tex
@@ -25,6 +25,11 @@
 
 \begin{document}
 
+\maketitle
+
+\tableofcontents
+\newpage
+
 \section{General}
 \input{lectures/0_general.tex}
 \newpage
@@ -45,9 +50,9 @@
 \input{lectures/4_binary_search.tex}
 \newpage
 
-% \section{Linked List}
-% \input{lectures/linked_list.tex}
-% \newpage
+\section{Linked List}
+\input{lectures/linked_list.tex}
+\newpage
 
 \section{Images}
 \input{lectures/images.tex}
